--- a/.cproject
+++ b/.cproject
@@ -56,8 +56,14 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.865597217" name="bmp2pcl.cpp" rcbsApplicability="disable" resourcePath="src/bmp2pcl/bmp2pcl.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543.272024406">
+						<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543.272024406" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543"/>
+					</fileInfo>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.1457422446" name="Ctrl-Cut.h" rcbsApplicability="disable" resourcePath="src/cups-filter/Ctrl-Cut.h" toolsToInvoke=""/>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.671395269" name="Driver.h" rcbsApplicability="disable" resourcePath="src/cups-filter/Driver.h" toolsToInvoke=""/>
+					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.241516399" name="LaserJob.h" rcbsApplicability="disable" resourcePath="src/cups-filter/LaserJob.h" toolsToInvoke=""/>
 					<sourceEntries>
-						<entry excluding="cups-filter/tools|cups-filter/raster/filter|lpd-epilog|lpd-epilog/lpd.c|svg2pdf/svg2pdf.c|geom.c|tools/Delme.h|CuttingOptimizer.cpp|CupsParser.h|raster/filter|FilterChain.cpp|cups-epilog.cpp|TileMarker.cpp|CuttingOptimizer.c|geom.h|PrinterConnection.cpp|PCLTiffEncoder.h|CupsParser.cpp|tools/Delme.cpp|raster/bak|CuttingOptimizer.h|PCLTiffEncoder.cpp|point_map.c|cutting_optimizer.h|FilterChain.h|cups_epilog.h|TileMarker.h|PrinterConnection.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="cups-filter|pcl2png|ppm2pcl|ppm2pcl/raster/filter|cups-filter/tools/ppm2pcl.cpp|cups-filter/raster/filter|lpd-epilog|lpd-epilog/lpd.c|svg2pdf/svg2pdf.c|geom.c|tools/Delme.h|CuttingOptimizer.cpp|CupsParser.h|raster/filter|FilterChain.cpp|cups-epilog.cpp|TileMarker.cpp|CuttingOptimizer.c|geom.h|PrinterConnection.cpp|PCLTiffEncoder.h|CupsParser.cpp|tools/Delme.cpp|raster/bak|CuttingOptimizer.h|PCLTiffEncoder.cpp|point_map.c|cutting_optimizer.h|FilterChain.h|cups_epilog.h|TileMarker.h|PrinterConnection.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -702,7 +708,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="cups-filter/tools|cups-filter/raster/filter|lpd-epilog|lpd-epilog/lpd.c|svg2pdf/svg2pdf.c|geom.c|tools/Delme.h|CuttingOptimizer.cpp|CupsParser.h|FilterChain.cpp|cups-epilog.cpp|TileMarker.cpp|CuttingOptimizer.c|geom.h|PrinterConnection.cpp|PCLTiffEncoder.h|CupsParser.cpp|tools/Delme.cpp|raster/bak|raster|CuttingOptimizer.h|PCLTiffEncoder.cpp|point_map.c|cutting_optimizer.h|FilterChain.h|cups_epilog.h|TileMarker.h|PrinterConnection.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="cups-filter|bmp2pcl|bmp2pcl/bmp2pcl.cpp|pcl2png|ppm2pcl|cups-filter/raster|cups-filter/LaserJob.h|cups-filter/LaserJob.cpp|cups-filter/Driver.h|cups-filter/Driver.cpp|cups-filter/Ctrl-Cut.h|cups-filter/Ctrl-Cut.cpp|cups-filter/vector|cups-filter/util|cups-filter/tri_logger|ppm2pcl/raster/filter|cups-filter/tools/ppm2pcl.cpp|cups-filter/raster/filter|lpd-epilog|lpd-epilog/lpd.c|svg2pdf/svg2pdf.c|geom.c|tools/Delme.h|CuttingOptimizer.cpp|CupsParser.h|FilterChain.cpp|cups-epilog.cpp|TileMarker.cpp|CuttingOptimizer.c|geom.h|PrinterConnection.cpp|PCLTiffEncoder.h|CupsParser.cpp|tools/Delme.cpp|raster/bak|raster|CuttingOptimizer.h|PCLTiffEncoder.cpp|point_map.c|cutting_optimizer.h|FilterChain.h|cups_epilog.h|TileMarker.h|PrinterConnection.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
