--- a/.cproject
+++ b/.cproject
@@ -56,14 +56,22 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.865597217" name="bmp2pcl.cpp" rcbsApplicability="disable" resourcePath="src/bmp2pcl/bmp2pcl.cpp" toolsToInvoke="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543.272024406">
-						<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543.272024406" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543"/>
-					</fileInfo>
 					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.1457422446" name="Ctrl-Cut.h" rcbsApplicability="disable" resourcePath="src/cups-filter/Ctrl-Cut.h" toolsToInvoke=""/>
 					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.671395269" name="Driver.h" rcbsApplicability="disable" resourcePath="src/cups-filter/Driver.h" toolsToInvoke=""/>
 					<fileInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.241516399" name="LaserJob.h" rcbsApplicability="disable" resourcePath="src/cups-filter/LaserJob.h" toolsToInvoke=""/>
+					<folderInfo id="cdt.managedbuild.config.gnu.exe.debug.250644359.1454542655" name="/" resourcePath="src/ppm2pcl/raster/filter">
+						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.debug.906571140" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.debug" unusedChildren="">
+							<tool id="cdt.managedbuild.tool.gnu.archiver.base.1273713774" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1753683383"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.526617990" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.debug.694145543"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1245852139" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.debug.1028439664"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.75491862" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug.903163046"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.1932350447" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.debug.1199342356"/>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.debug.683473772" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.debug.1990152385"/>
+						</toolChain>
+					</folderInfo>
 					<sourceEntries>
-						<entry excluding="cups-filter|pcl2png|ppm2pcl|ppm2pcl/raster/filter|cups-filter/tools/ppm2pcl.cpp|cups-filter/raster/filter|lpd-epilog|lpd-epilog/lpd.c|svg2pdf/svg2pdf.c|geom.c|tools/Delme.h|CuttingOptimizer.cpp|CupsParser.h|raster/filter|FilterChain.cpp|cups-epilog.cpp|TileMarker.cpp|CuttingOptimizer.c|geom.h|PrinterConnection.cpp|PCLTiffEncoder.h|CupsParser.cpp|tools/Delme.cpp|raster/bak|CuttingOptimizer.h|PCLTiffEncoder.cpp|point_map.c|cutting_optimizer.h|FilterChain.h|cups_epilog.h|TileMarker.h|PrinterConnection.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="src|experiments|src/ppm2pcl/raster/filter|test-code|src/pcl2png|src/svg2pdf|src/lpd-epilog|src/cups-filter|src/cups-epilog|src/bmp2pcl" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="raster/filter" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src/ppm2pcl"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -707,8 +715,18 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<folderInfo id="cdt.managedbuild.config.gnu.exe.release.585713042.919876486" name="/" resourcePath="src/ppm2pcl/raster/filter">
+						<toolChain id="cdt.managedbuild.toolchain.gnu.exe.release.1582622896" name="Linux GCC" superClass="cdt.managedbuild.toolchain.gnu.exe.release" unusedChildren="">
+							<tool id="cdt.managedbuild.tool.gnu.archiver.base.451049038" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.base.1851100894"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.1668830441" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.exe.release.844766802"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.compiler.exe.release.961403745" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.exe.release.1759866709"/>
+							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.release.469780223" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.release.1205079413"/>
+							<tool id="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1286711608" name="GCC C++ Linker" superClass="cdt.managedbuild.tool.gnu.cpp.linker.exe.release.1292774179"/>
+							<tool id="cdt.managedbuild.tool.gnu.assembler.exe.release.1242640770" name="GCC Assembler" superClass="cdt.managedbuild.tool.gnu.assembler.exe.release.1888740785"/>
+						</toolChain>
+					</folderInfo>
 					<sourceEntries>
-						<entry excluding="cups-filter|bmp2pcl|bmp2pcl/bmp2pcl.cpp|pcl2png|ppm2pcl|cups-filter/raster|cups-filter/LaserJob.h|cups-filter/LaserJob.cpp|cups-filter/Driver.h|cups-filter/Driver.cpp|cups-filter/Ctrl-Cut.h|cups-filter/Ctrl-Cut.cpp|cups-filter/vector|cups-filter/util|cups-filter/tri_logger|ppm2pcl/raster/filter|cups-filter/tools/ppm2pcl.cpp|cups-filter/raster/filter|lpd-epilog|lpd-epilog/lpd.c|svg2pdf/svg2pdf.c|geom.c|tools/Delme.h|CuttingOptimizer.cpp|CupsParser.h|FilterChain.cpp|cups-epilog.cpp|TileMarker.cpp|CuttingOptimizer.c|geom.h|PrinterConnection.cpp|PCLTiffEncoder.h|CupsParser.cpp|tools/Delme.cpp|raster/bak|raster|CuttingOptimizer.h|PCLTiffEncoder.cpp|point_map.c|cutting_optimizer.h|FilterChain.h|cups_epilog.h|TileMarker.h|PrinterConnection.h" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry excluding="src|experiments|test-code" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
